--- a/demo_app/templates/partials/pipeline_results.html
+++ b/demo_app/templates/partials/pipeline_results.html
@@ -104,3 +104,12 @@
     </div>
   </section>
 </div>
+<script>
+  window.dispatchEvent(
+    new CustomEvent("ragdoll:loader-update", {
+      detail: {
+        items: {{ loader_items | tojson }},
+      },
+    })
+  );
+</script>
